--- a/app/views/oeuvres/search.html.erb
+++ b/app/views/oeuvres/search.html.erb
@@ -35,11 +35,6 @@
     margin-bottom: 0; /* Assurez-vous que les cartes n'ajoutent pas de marge en bas */
   }
 
-  #load-more-button-oeuvres {
-    display: flex;
-    justify-content: flex-start; /* Ajuste la position du bouton */
-  }
-
   .card-category {
     flex-direction:column;
     gap: 18px;
@@ -63,6 +58,10 @@
     align-items: end;
     position: relative;
     padding: 20px;
+  }
+  .card-designer,
+  .card-oeuvre {
+  display: none;
   }
   .card-designer:hover, .card-oeuvre:hover{
     opacity: 0.8;
@@ -341,7 +340,7 @@
     <div class="autocomplete">
       <input id="workSearch" name="query" autocomplete="off" class="search-top-bar" type="search" placeholder="Rechercher une référence" style="background-image: url('data:image/svg+xml;utf8,<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;15&quot; height=&quot;15&quot; viewBox=&quot;0 0 15 15&quot; fill=&quot;none&quot;><path d=&quot;M14.7564 13.4147L11.9565 10.6231C12.8599 9.47218 13.3501 8.051 13.3482 6.58794C13.3482 5.28497 12.9619 4.01126 12.238 2.92788C11.5141 1.8445 10.4852 1.00011 9.2814 0.50148C8.07761 0.00285444 6.753 -0.127609 5.47506 0.126588C4.19713 0.380785 3.02327 1.00823 2.10193 1.92957C1.18059 2.8509 0.553149 4.02476 0.298952 5.3027C0.0447546 6.58063 0.175218 7.90525 0.673843 9.10903C1.17247 10.3128 2.01686 11.3417 3.10024 12.0656C4.18362 12.7895 5.45733 13.1759 6.7603 13.1759C8.22336 13.1777 9.64455 12.6875 10.7954 11.7842L13.5871 14.584C13.6636 14.6612 13.7547 14.7225 13.855 14.7643C13.9554 14.8061 14.063 14.8276 14.1717 14.8276C14.2804 14.8276 14.3881 14.8061 14.4884 14.7643C14.5888 14.7225 14.6799 14.6612 14.7564 14.584C14.8336 14.5075 14.8949 14.4164 14.9367 14.3161C14.9785 14.2157 15 14.1081 15 13.9994C15 13.8907 14.9785 13.783 14.9367 13.6827C14.8949 13.5823 14.8336 13.4912 14.7564 13.4147ZM1.81935 6.58794C1.81935 5.61071 2.10913 4.65543 2.65205 3.84289C3.19497 3.03036 3.96664 2.39706 4.86948 2.02309C5.77232 1.64913 6.76578 1.55128 7.72424 1.74193C8.68269 1.93257 9.56308 2.40315 10.2541 3.09416C10.9451 3.78516 11.4157 4.66556 11.6063 5.62401C11.797 6.58246 11.6991 7.57592 11.3251 8.47876C10.9512 9.3816 10.3179 10.1533 9.50535 10.6962C8.69281 11.2391 7.73753 11.5289 6.7603 11.5289C5.44988 11.5289 4.19313 11.0083 3.26652 10.0817C2.33991 9.15511 1.81935 7.89836 1.81935 6.58794Z&quot; fill=&quot;%23202020&quot;/></svg>'); background-repeat: no-repeat; background-position-x: 20px; background-position-y: center;">
   </div>
-<%end%>
+<% end %>
 <%= link_to notifications_path, class: "nav-link-profil" do %>
   <div class="circle circle-notif">
     <svg width="25" height="29" viewBox="0 0 25 29" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -403,36 +402,39 @@
     <button class="button dark">Voir les frises chronologiques</button>
   </a>
   <h2 class="title">Designers</h2>
-  <div class="flex-designer" id="designer-cards">
-    <% @designers = Designer.where(validation: true).order(:nom_designer) %>
-    <% @designers.each do |designer| %>
-      <%= link_to designer do %>
-        <% image_path = "designers/desktop/#{remove_accents_and_special_chars(designer.nom_designer)}.webp" %>
-        <% if asset_exists?(image_path) %>
-          <div class="card-designer" style="background: url('<%= asset_path(image_path) %>'); background-size: cover; background-position:center center;">
-          <% else %>
-            <% Rails.logger.debug("Image not found : #{image_path}") %>
-            <div class="card-designer" style="background: url('<%= asset_path(designer.image) %>'); background-size: cover; background-position:center;">
-            <% end %>
-            <div class="inner-card-designer">
-              <% designer.countries.each do |country| %>
-                <p class="country-card-designer">
-                  <span class="flag"><%= country_flag(country.country_numeric) %></span>
-                  <%= country.country %>
-                </p>
+  <div class="container-designers">
+    <div class="flex-designer" id="designer-cards">
+      <% @designers = Designer.where(validation: true).order(:nom_designer) %>
+      <% @designers.each do |designer| %>
+        <%= link_to designer do %>
+          <% image_path = "designers/desktop/#{remove_accents_and_special_chars(designer.nom_designer)}.webp" %>
+          <% if asset_exists?(image_path) %>
+            <div class="card-designer" style="background: url('<%= asset_path(image_path) %>'); background-size: cover; background-position:center center;">
+            <% else %>
+              <% Rails.logger.debug("Image not found : #{image_path}") %>
+              <div class="card-designer" style="background: url('<%= asset_path(designer.image) %>'); background-size: cover; background-position:center;">
               <% end %>
-              <p class="title-card-designer"><%= designer.nom_designer %></p>
+              <div class="inner-card-designer">
+                <% designer.countries.each do |country| %>
+                  <p class="country-card-designer">
+                    <span class="flag"><%= country_flag(country.country_numeric) %></span>
+                    <%= country.country %>
+                  </p>
+                <% end %>
+                <p class="title-card-designer"><%= designer.nom_designer %></p>
+              </div>
             </div>
-          </div>
-        <%end%>
-      <% end %>
-    </div>
-    <div id="load-more-button-designers">
-      <button class="load-more-btn button dark" >Charger plus de designers</button>
+          <% end %>
+        <% end %>
+      </div>
+      <div id="load-more-button-designers">
+        <button class="load-more-btn button dark" onclick="showMoreDesigners()">Charger plus de designers</button>
+      </div>
     </div>
     <h2 class="title">Références</h2>
     <div class="container-oeuvres">
       <div class="flex-oeuvre" id="oeuvre-cards">
+        <% @oeuvres = Oeuvre.where(validation: true).order(:nom_oeuvre) %>
         <% @oeuvres.each do |oeuvre| %>
           <%= link_to oeuvre do %>
             <% image_path = "oeuvres/desktop/#{remove_accents_and_special_chars(oeuvre.nom_oeuvre)}.webp" %>
@@ -450,98 +452,90 @@
             <% end %>
           <% end %>
         </div>
-        <!-- Bouton en dehors de la flexbox -->
         <div id="load-more-button-oeuvres">
-          <button class="load-more-btn button dark">Charger plus de références</button>
+          <button class="load-more-btn button dark" onclick="showMoreOeuvres()">Charger plus de références</button>
         </div>
       </div>
-      <script>
-        $(document).ready(function() {
-            const designerCards = document.querySelectorAll('.card-designer');
-            const oeuvreCards = document.querySelectorAll('.card-oeuvre');
-            const loadMoreButtonDesigners = document.getElementById('load-more-button-designers');
-            const loadMoreButtonOeuvres = document.getElementById('load-more-button-oeuvres');
-            const initialCardsToShow = 8;
-            let cardsToShowDesigners = initialCardsToShow;
-            let cardsToShowOeuvres = initialCardsToShow;
-
-            // Fonction pour afficher les cartes des designers
-            function showMoreDesigners() {
-              for (let i = cardsToShowDesigners; i < cardsToShowDesigners + initialCardsToShow; i++) {
-                if (i >= designerCards.length) {
-                  loadMoreButtonDesigners.disabled = true;
-                  loadMoreButtonDesigners.textContent = "";
-                  break;
-                }
-                designerCards[i].style.display = 'flex';
-              }
-              cardsToShowDesigners += initialCardsToShow;
-            }
-
-            // Fonction pour afficher les cartes des oeuvres
-            function showMoreOeuvres() {
-              for (let i = cardsToShowOeuvres; i < cardsToShowOeuvres + initialCardsToShow; i++) {
-                if (i >= oeuvreCards.length) {
-                  loadMoreButtonOeuvres.disabled = true;
-                  loadMoreButtonOeuvres.textContent = "";
-                  break;
-                }
-                oeuvreCards[i].style.display = 'flex';
-              }
-              cardsToShowOeuvres += initialCardsToShow;
-            }
-
-            // Cacher toutes les cartes des designers au-delà de celles à afficher initialement
-            for (let i = initialCardsToShow; i < designerCards.length; i++) {
-              designerCards[i].style.display = 'none';
-            }
-
-            // Cacher toutes les cartes des oeuvres au-delà de celles à afficher initialement
-            for (let i = initialCardsToShow; i < oeuvreCards.length; i++) {
-              oeuvreCards[i].style.display = 'none';
-            }
-
-            // Gérer le clic sur le bouton "Charger plus" pour les designers
-            loadMoreButtonDesigners.addEventListener('click', function() {
-              showMoreDesigners();
-            });
-
-            // Gérer le clic sur le bouton "Charger plus" pour les oeuvres
-            loadMoreButtonOeuvres.addEventListener('click', function() {
-              showMoreOeuvres();
-            });
-          });
-      </script>
     </div>
-    <%= javascript_include_tag "controllers/autocomplete", defer: true %>
-    <script>
-      $(document).ready(function() {
-        var works = <%= raw @works.to_json %>; // Injecter les noms des œuvres dans le JavaScript
-        var designers = <%= raw @designers.to_json %>; // Injecter les noms des designers dans le JavaScript
+  </div>
+  <script>
+    $(document).ready(function() {
+      const designerCards = document.querySelectorAll('.card-designer');
+      const oeuvreCards = document.querySelectorAll('.card-oeuvre');
+      const loadMoreButtonDesigners = document.getElementById('load-more-button-designers');
+      const loadMoreButtonOeuvres = document.getElementById('load-more-button-oeuvres');
+      const initialCardsToShow = 8;
+      let cardsToShowDesigners = initialCardsToShow;
+      let cardsToShowOeuvres = initialCardsToShow;
 
-        // Mapping des noms vers les URLs respectives
-        var routeMap = {
-          <% @oeuvres.each do |oeuvre| %>
-            "<%= j oeuvre.nom_oeuvre %>": "<%= oeuvre_path(oeuvre) %>",
-          <% end %>
-          <% @designers.each do |designer| %>
-            "<%= j designer.nom_designer %>": "<%= designer_path(designer) %>",
-          <% end %>
-        };
-
-        // Initialise l'autocomplétion
-        autocomplete(document.getElementById("workSearch"), works.concat(designers), routeMap);
-      });
-    </script>
-    <script>
-      $(document).ready(function() {
-        var workSearchInput = document.getElementById("workSearch");
-
-        workSearchInput.addEventListener("keydown", function(event) {
-          if (event.key === "Enter") {
-            event.preventDefault(); // Empêche le comportement par défaut
-            document.querySelector("form").submit(); // Soumettre le formulaire
+      // Fonction pour afficher les cartes des designers
+      function showMoreDesigners() {
+        for (let i = cardsToShowDesigners - initialCardsToShow; i < cardsToShowDesigners; i++) {
+          if (i >= designerCards.length) {
+            loadMoreButtonDesigners.disabled = true;
+            loadMoreButtonDesigners.textContent = "Toutes les cartes sont chargées";
+            break;
           }
-        });
+          designerCards[i].style.display = 'flex';
+        }
+        cardsToShowDesigners += initialCardsToShow;
+      }
+
+      // Fonction pour afficher les cartes des oeuvres
+      function showMoreOeuvres() {
+        for (let i = cardsToShowOeuvres - initialCardsToShow; i < cardsToShowOeuvres; i++) {
+          if (i >= oeuvreCards.length) {
+            loadMoreButtonOeuvres.disabled = true;
+            loadMoreButtonOeuvres.textContent = "Toutes les cartes sont chargées";
+            break;
+          }
+          oeuvreCards[i].style.display = 'flex';
+        }
+        cardsToShowOeuvres += initialCardsToShow;
+      }
+
+      // Initialiser l'affichage des cartes
+      showMoreDesigners();
+      showMoreOeuvres();
+
+      // Ajouter les événements de clic pour les boutons "Charger plus"
+      if (loadMoreButtonDesigners) {
+        loadMoreButtonDesigners.addEventListener('click', showMoreDesigners);
+      }
+      if (loadMoreButtonOeuvres) {
+        loadMoreButtonOeuvres.addEventListener('click', showMoreOeuvres);
+      }
+    });
+  </script>
+  <%= javascript_include_tag "controllers/autocomplete", defer: true %>
+  <script>
+    $(document).ready(function() {
+      var works = <%= raw @works.to_json %>; // Injecter les noms des œuvres dans le JavaScript
+      var designers = <%= raw @designers.to_json %>; // Injecter les noms des designers dans le JavaScript
+
+      // Mapping des noms vers les URLs respectives
+      var routeMap = {
+        <% @oeuvres.each do |oeuvre| %>
+          "<%= j oeuvre.nom_oeuvre %>": "<%= oeuvre_path(oeuvre) %>",
+        <% end %>
+        <% @designers.each do |designer| %>
+          "<%= j designer.nom_designer %>": "<%= designer_path(designer) %>",
+        <% end %>
+      };
+
+      // Initialise l'autocomplétion
+      autocomplete(document.getElementById("workSearch"), works.concat(designers), routeMap);
+    });
+  </script>
+  <script>
+    $(document).ready(function() {
+      var workSearchInput = document.getElementById("workSearch");
+
+      workSearchInput.addEventListener("keydown", function(event) {
+        if (event.key === "Enter") {
+          event.preventDefault(); // Empêche le comportement par défaut
+          document.querySelector("form").submit(); // Soumettre le formulaire
+        }
       });
-    </script>
+    });
+  </script>
